@@ -1,3 +1,14 @@
+2012-12-05  Sergio Martin <sergio.martin@artica.es>
+
+	* godmode/agentes/module_manager_editor_common.php
+	godmode/agentes/configurar_agente.php
+	godmode/agentes/module_manager_editor.php
+	godmode/menu.php
+	godmode/category
+	godmode/category/category.php
+	godmode/category/edit_category.php: Add categories editor
+	and the category combo in the modules editor
+
 2012-12-05 Miguel de Dios <miguel.dedios@artica.es>
 	
 	* extensions/update_manager/lib/libupdate_manager_client.php,
